# MakerTiles

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  build_and_test.sh
daemon/: .gitignore  pyproject.toml  requirements.txt
daemon/src/makertiles/: __init__.py  board.py  board_manager.py  clib_connection.py  connection.py  field_protocol.py  rx_manager.py  tx_manager.py  ui.py  ui_methods.py
daemon/tests/: conftest.py  test.py  test_field_protocol.py  test_main.py  useful.py
firmware/: .gitignore
firmware/Boards/: .project
firmware/Boards/Battery/: .cproject  .mxproject  .project  Battery.ioc  Battery.launch
firmware/Boards/Button/: .cproject  .mxproject  .project  Button.ioc  Button.launch
firmware/Boards/ButtonExpansion/: .cproject  .project  ButtonExpansion.ioc  ButtonExpansion.launch
firmware/Boards/Buttons/: .cproject  .project  Buttons.ioc  Buttons.launch
firmware/Boards/Dial/: .cproject  .mxproject  .project  Dial.ioc  STM32C011F6PX_FLASH.ld
firmware/Boards/Distance/: .cproject  .mxproject  .project  Distance Debug.launch  Distance.ioc
firmware/Boards/IMU/: .cproject  .mxproject  .project  IMU Debug.launch  IMU.ioc
firmware/Boards/Joystick/: .cproject  .project  Joystick.ioc  Joystick.launch
firmware/Boards/LedMatrix/: .cproject  .project  LedMatrix.ioc  LedMatrix.launch
firmware/Boards/LedStrip/: .cproject  .project  LedStrip Debug (1).launch  LedStrip Debug Without Reset.launch  LedStrip Debug.launch  LedStrip.ioc  STM32G030F6PX_FLASH.ld
firmware/Boards/LightSound/: .cproject  .mxproject  .project  LightSound.ioc  LightSound.launch
firmware/Boards/Motor/: .cproject  Motor Debug.launch  Motor.ioc
firmware/Boards/Screen/: .cproject  .mxproject  .project  Screen Debug.launch  Screen.ioc
firmware/Boards/Servo/: .cproject  .project  STM32G030K6TX_FLASH.ld  Servo.ioc  Servo.launch
firmware/Boards/Speaker/: .cproject  .mxproject  .project  STM32G030F6PX_FLASH.ld  Speaker.ioc  Speaker.launch
firmware/Boards/Temperature/: .cproject  .project  Temperature.ioc  Temperature.launch
firmware/Boards/USB/: .cproject  .mxproject  .project  USB Debug (1).launch  USB Debug (without reset).launch  USB Debug.launch  USB.ioc
firmware/Documents/: NewBoardSetup.txt
firmware/Libraries/: battery.cpp  battery.h  button.cpp  button.h  dcmotors.cpp  dcmotors.h  distanceSensor.cpp  distanceSensor.h  firTap.py  fonts.c  fonts.h  imu.cpp  imu.h  joystick.cpp  joystick.h  ledStrip.cpp  ledStrip.h  lightSensor.cpp  lightSensor.h  microphone.cpp  microphone.h  myAssert.cpp  myAssert.h  nrf24.c  nrf24.h  rotaryEncoder.cpp  rotaryEncoder.h  screen.cpp  screen.h  servos.cpp  servos.h  speaker.cpp  speaker.h  temperatureSensor.cpp  temperatureSensor.h  tft.c  tft.h  useful.c  useful.h  wireless.c  (+1 more)
hardware/: .gitignore
hardware/Libraries/: boards.bak  boards.dcm  boards.kicad_sym  boards.lib
hardware/Libraries/3DModels/: 2059-301_998-403.stp  2060-452_998-404.stp  M22-5330605.IGS  M22-5330605.STL  Screw Terminal Block 3.5mm 2-way.step  Screw Terminal Block 3.5mm 3-way.step  TSM-103-01-T-DH.igs  TSM-104-01-T-DH.igs  TSW-106-08-T-T-RA.igs  m22-6540642_asm.igs  m22-6540642_asm.stp
hardware/Libraries/BOM/: ComponentInfo.csv
hardware/Libraries/Unused/: boards.bak  boards.bck
hardware/Libraries/boards.pretty/: 01x06_2.54mm_Female.kicad_mod  01x06_2.54mm_Male.kicad_mod  01x08_P2.00mm_SMD_horizontal.kicad_mod  01x08_PinHeader_P2.00mm_SMD_horizontal.kicad_mod  01x08_PinSocket_P2.00mm_SMD_horizontal.kicad_mod  1p_push_terminal_2059-301_998-403.kicad_mod  2450AT18A100.kicad_mod  2InchScreen.kicad_mod  2p_push_terminal_official_2060-452_998-404.kicad_mod  5A_Buck_MP9447.kicad_mod  6A_buck_SY8366H.kicad_mod  6x3_right_angle_pin_header.kicad_mod  74LVC1G07GW.kicad_mod  8pin_1.27mm_castellations.kicad_mod  ADTSM644KV.kicad_mod  AFA01-S08FCA-00.kicad_mod  AFA01-S12FCA-00.kicad_mod  AP3722AT.kicad_mod  APDS-9950.kicad_mod  Antenna_AN0443.kicad_mod  Antenna_cypress_MIFA.kicad_mod  BUCK_DRIVER_TPS51117RGYR.kicad_mod  BatteryHolder_Keystone_1060_1x2032.kicad_mod  BoardText.kicad_mod  CP_Elec_6.3x5.3.kicad_mod  CP_Elec_6.3x5.9.kicad_mod  CP_Radial_D10.0mm_P5.00mm.kicad_mod  CP_Radial_D6.3mm_P2.50mm.kicad_mod  (+158 more)
hardware/Scripts/: BAT_tmp.kicad_pro  BEX_tmp.kicad_pro  BLK_tmp.kicad_pro  BTS_tmp.kicad_pro  BUT_tmp.kicad_pro  DIA_tmp.kicad_pro  DIS_tmp.kicad_pro  JOY_tmp.kicad_pro  KicadParser.py  KicadParserOld.py  LED_tmp.kicad_pro  LIG_tmp.kicad_pro  MAT_tmp.kicad_pro  MOT_tmp.kicad_pro  POW_tmp.kicad_pro  Panel.kicad_pcb  Panel.kicad_pcb_old  Panel.kicad_prl  Panel.kicad_pro  SCR_tmp.kicad_pro  SER_tmp.kicad_pro  SPK_tmp.kicad_pro  TMP_tmp.kicad_pro  USB_tmp.kicad_pro  WIR_tmp.kicad_pro  convert_bom_to_jlcpcb.py  convert_bom_to_pcbway.py  convert_pos_file_to_jlcpcb.py  convert_pos_file_to_pcbway.py  generate_all_production_zips.py  matrixPlace.py  panelise.py  plot_gerbers.py  python_kicad
protocol/fieldprotocol/: CMakeLists.txt  FieldProtocol.code-workspace  README.md  build.sh  build_and_test.sh
protocol/fieldprotocol/src/: fpCommon.hpp  fpDaemon.hpp  fpMaster.hpp  fpNode.hpp  fpProcessor.hpp
protocol/fieldprotocol/test/: masterNodeSystem.cpp  microbusMock.cpp  microbusMock.hpp  networkSim.hpp  pythonApi.cpp  realMicrobus.cpp  realMicrobus.hpp  sources.txt  test.cpp  testBasic.cpp  testBasic.hpp  testCommon.cpp  testCommon.hpp  testFullSystem.cpp  testFullSystem.hpp  usbMock.cpp  usbMock.hpp
protocol/microbus/: .gitignore  CMakeLists.txt  Microbus.code-workspace
protocol/microbus/src/: config.hpp  diagnostics.hpp  master.hpp  master_tx.hpp  microbus.cpp  microbus.hpp  network.hpp  node.hpp  node_queue.hpp  packet.hpp  ring_buffer.hpp  rx_queue.hpp  scheduler.hpp  stats.hpp  tx_engine.hpp  util.hpp
protocol/microbus/test/: main.cpp  packet_checker.cpp  packet_checker.hpp  test_basic.cpp  test_microbus.cpp  test_network.cpp  test_support.cpp  test_support.hpp  test_tx_engine.cpp
protocol/stm32/: stm32F1SpiMaster.cpp  stm32F1SpiMaster.hpp  stm32Node.cpp  stm32Node.h
tests/system/: CMakeLists.txt  build_and_test.sh
tools/: logparser.py
(+1453 files in other folders)
