[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "makertiles"
version = "0.1.0"
description = "Daemon for talking the MakerTiles field protocol to hardware nodes over USB/serial."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Sean Bremner" }]
dependencies = [
    "pyserial>=3.5",
]

[project.optional-dependencies]
# Pillow is only needed for the screen image-drawing helpers in ui_methods.
images = ["Pillow>=10.0"]
test = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
# Make the src-layout package importable in tests without an editable install.
pythonpath = ["src"]
testpaths = ["tests"]
